--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style-light.css" id="stylecss">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="shortcut icon" href="files/favicon.png" type="image/png">
     <title>Портфолио Junior верстальщика</title>
   </head>
   <script type="text/javascript">
