--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
         <h3>Мои навыки</h3>
           <dl class="skills-list">
             <dt class="skill-html">HTML</dt>
-            <dd class="level"><div style="width: 40%;">40%</div></dd>
+            <dd class="level"><div style="width: 55%;">55%</div></dd>
             <dt class="skill-css">CSS</dt>
-            <dd class="level"><div style="width: 40%;">40%</div></dd>
+            <dd class="level"><div style="width: 60%;">60%</div></dd>
+            <dt class="skill-js">JavaScript</dt>
+            <dd class="level"><div style="width: 20%;">20%</div></dd>
           </dl>
         </div>
       </div>
